Stop checkbox focus being cut off by wrapper

--- a/src/scss/global.scss
+++ b/src/scss/global.scss
@@ -10,6 +10,10 @@
         text-decoration: underline;
     }
 
+    .wrapper {
+        overflow: inherit;
+    }
+
 }
 
 body {
